syntax = "proto3";

option csharp_namespace = "FlashElf.ChaosKit.Protos";

service ChaosProto {
  rpc SendInvocation (AnyProto) returns (AnyProto);
}

message AnyProto {
  bytes Data = 1;
}